mule-user-guide/v/3.4/updating-metadata-in-an-existing-mapping.adoc
= 在现有映射中更新元数据

在创建数据映射流程之后，可能需要修改输入或输出元数据。

* 在某些情况下，您可以选择在输入或输出映射中添加或删除字段，或者编辑字段的名称和属性。元数据的基本编辑可在Graphical Mapping Editor的输入和输出窗格中找到。
* 您可能还需要在设计更改后从源代码重新加载元数据，在输入或输出中更改格式后手动重新创建元数据和元数据。 Anypoint DataMapper为这些操作提供*Infer Metadata*工具。

== 直接编辑输入和输出元数据

Anypoint DataMapper允许您修改以下格式输入和输出的元数据定义：

* 结构化数据：XML，JSON，键值映射
* 平面数据：CSV或固定宽度（不是Excel）

=== 添加一个字段

要添加具有下列属性的电话字段，请在输入窗格的联系人列表中添加：

* 类型：属性
* 姓名：电话
* 配置类型：字符串

使用以下步骤：

. 右键单击要添加字段的父元素。在这种情况下，请选择联系人。
. 选择添加字段。
. 在新建属性窗口中，单击类型旁边的下拉菜单，然后选择属性。
. 在名称输入框中，输入新字段的名称，在本例中为手机。
. 在配置部分，点击类型旁边的下拉菜单，然后选择字符串。
. 单击确定以添加显示在联系人下的新字段。

使用相同的过程在“输出”窗格中创建对应的字段，然后您可以按照常规创建字段之间的映射。

=== 编辑字段

完成以下过程以编辑现有输入或输出字段。

. 右键单击该字段，然后从下拉菜单中选择编辑字段。
. 在编辑属性窗口中，编辑该字段的名称和类型。

=== 删除字段

完成以下步骤以删除现有的输入或输出字段。

. 如果您希望移除的字段映射到任何其他字段，请通过选择输出字段来移除映射，然后在“当前元素映射”窗格中单击红色的X。
. 右键单击要删除的字段，然后从下拉菜单中选择删除字段。
. 单击确定确认字段删除。

== 使用推断元数据工具

Infer Metadata工具（由魔杖图标指示，见下图）可用于输入和输出数据，可在DataMapper View的输入和输出窗格中访问。

image:image043.png[image043]

*Infer Metadata*工具公开三个修改输入或输出元数据的操作：

*  <<Reload Metadata>>
*  <<Recreate Metadata>>
*  <<Recreate Metadata From Input Or Output>>

===  *Reload Metadata*

此方法适用于以下输入/输出格式：

*  XML
*  JSON
*  CSV
* 固定宽度
*  Excel中

当您使用上述任何格式创建数据映射流程时，可以向DataMapper提供示例输入或输出文件，从中可以推断出元数据。在配置DataMapper之后的任何时候，您都可以使用Reload Metadata操作从同一个示例文件中提取元数据。

要应用此方法，请完成以下步骤：

. 使用您的首选编辑器根据需要修改输入或输出文件。
. 将输入或输出文件重新加载到DataMapper中。
. 根据需要重新映射任何字段。

有关详细信息，请参阅<<Using Infer Metadata: Examples>>的{​​{0}}。

=== 重新创建元数据

此方法允许您通过从新的输入或输出文件加载元数据或编辑已加载到DataMapper的输入或输出字段来重新创建输入或输出元数据。当您选择*Recreate Metadata*时，DataMapper将显示适合您输入或输出格式的配置窗口。

例如，为XML输入或输出重新创建元数据时，DataMapper会显示*Recreate Metadata XML* ** **窗口（如下所示）。这允许您上传原始XML元数据的修改版本或全新版本，而无需从头开始重新构建数据映射流程。

image:image049.png[image049]

有关详细信息，请参阅示例的<<Adding the Output Field With Recreate Metadata>>。

=== 从输入或输出重新创建元数据

使用此方法，DataMapper会尝试从映射的另一端推断输入或输出元数据，并修改输入或输出元数据（无论您选择哪个）以匹配对方的元数据。

例如，如果您向输入元数据添加，删除或修改字段，则可以使用此方法使DataMapper自动推断并在输出元数据中插入匹配字段。反之亦然：如果修改输出元数据，DataMapper可以自动修改输入元数据以匹配输出。

[WARNING]
====
*Recreating Metadata with Complex Mappings*

如果您正在处理复杂映射，请小心使用此工具，因为即使匹配字段中的轻微逻辑错误也会产生意外结果。
====

[NOTE]
====
*DataMapper, Connectors and DataSense*

通过Mule Studio的Perceptive Flow Design，支持DataSense的连接器可从连接的源系统中检索支持的操作和对象的完整元数据，包括任何自定义对象和字段。如果将流模型化为包含连接器作为DataMapper的输入或输出，则Mule将使用从连接系统（例如SaaS提供者）检索到的元数据，并将该数据馈送到DataMapper中，以自动执行正确的输入和输出元数据设置。有关更多详细信息，请参阅 link:/mule-user-guide/v/3.4/mule-datasense[Mule DataSense]和 link:/mule-user-guide/v/3.4/using-perceptive-flow-design[使用感知流程设计]。
====

== 使用推断元数据：示例

此示例显示了Infer元数据功能的几种用法。

=== 在这些示例中使用的配置

以下部分说明如何添加，编辑和删除CSV到XML数据映射中的字段。虽然这些示例适用于CSV输入数据，但相同的过程适用于XML输出数据。 DataMapper转换器使用以下配置：

*  *Input:* CSV
*  *Output:* XML
*  **Input file:** `$PROJECT_HOME/src/test/resources/contacts.csv`
*  *Sample XML output file*：`$PROJECT_HOME/src/test/resources/users.xml`

下图说明了最初的DataMapper视图。

image:image046.png[image046]

=== 使用重新加载元数据添加输入字段

配置完数据映射流程（请参阅<<Configuration Employed In These Examples>>）后，我们发现需要在输入文件中添加一个字段。

1.找到您为DataMapper提供的输入文件（本例中为`src/test/resources/contacts.csv`），并对其进行编辑以添加新字段。对于此示例，请在标题末尾添加字段`Phone`，然后填写信息，如下所示。
+
[source, code, linenums]
----
Name,Last Name,Street,ZipCode,Phone
John,Doe,123 Main Street,111,2222-2222
Jane,Doe,345 Main Street,111,3333-3333
----

2.在DataMapper视图的输入窗格中，单击*Infer Metadata*图标，然后选择*Reload Metadata*。
+
image:image047.png[image047]

DataMapper中的输入窗格现在将显示`Phone`字段，如下所示。

image:image048.png[image048]

[WARNING]
====
*Mapping Changes after Reloading Metadata* +

从修改的输入或输出文件重新加载元数据可能会导致DataMapper删除现有的字段。例如，如果您配置的映射包含字段`Name`，并且您重新加载到DataMapper中的文件不包含字段`Name`，则DataMapper将从映射中删除该字段。在这种情况下，您将不得不手动删除对已删除字段的任何引用。
====

=== 通过重新创建元数据添加输出字段

完成以下步骤将新字段`Phone`添加到您的输出XML中。

. 找到您为DataMapper提供的输出文件，在这种情况下`src/test/resources/user.xml`，然后编辑它以添加新字段。对于此示例，添加元素`Phone`，如下所示。
+
[source, xml, linenums]
----
<users>
    <user>
        <name></name>
        <lastName></lastName>
        <street></street>
        <zipCode></zipCode>
        <Phone></Phone>
    </user>
</users>
----

. 在DataMapper视图的输出窗格中，单击*Infer Metadata*图标，然后选择*Recreate Metadata*。 *Recreate Metadata XML*对话框打开。
+
image:image049.png[image049]

. 点击*Generate schema from xml*。

. 浏览并选择示例输出XML文件，然后单击*OK*。

.  Studio会要求您确认是否要覆盖原始XML模式文件。点击*OK*确认。

. 点击*Infer Metadata*工具，然后点击*Reload Metadata*。输出XML包含新的`Phone`字段，如下所示。
+
image:image050.png[image050]

. 手动映射输入和输出`Phone`字段。

. 数据映射流程的预览产生以下输出：
+
[source, xml, linenums]
----
<users>
  <user>
    <name>John</name>
    <lastName>Doe</lastName>
    <street>123 Main Street</street>
    <zipCode>111</zipCode>
    <Phone>2222-2222</Phone>
  </user>
</users>
<users>
  <user>
    <name>Jane</name>
    <lastName>Doe</lastName>
    <street>345 Main Street</street>
    <zipCode>111</zipCode>
    <Phone>3333-3333</Phone>
  </user>
</users>
----

=== 通过输入/输出重新创建元数据添加输出字段

本节介绍如何使用**Recreate Metadata from Input/Output**方法实现与前一部分相同的结果，即将字段`Phone`添加到输出XML中。

在应用于输出数据时，重新创建元数据会尝试修改输出数据，使其与输入数据匹配。如果在此示例中，您在输入数据中添加了新字段，则DataMapper会在输出数据中创建一个具有相同名称的新字段。

在输入CSV中添加`Phone`字段后，点击输出窗格中的*Infer Metadata*工具，然后选择*Recreate Metadata From Input*。 DataMapper将自动在输出XML中创建新的`Phone`字段，作为具有以下参数的属性：

*  *Name:* `Phone`
*  *Type:* `string`
*  *Namespace:* `default`

如果从输入数据中删除一个字段，然后选择**Recreate Data From Input,**，DataMapper将删除相应的输出字段（如果存在）。

您可以从输出元数据重新创建输入元数据。在输入窗格中，按照上面刚刚列出的流程进行操作：点击*Infer Metadata*，然后选择*Recreate Data From Output*。在这种情况下，DataMapper添加或删除输入字段以使输入字段适应输出字段。

[WARNING]
====
*Recreating Metadata in Complex Mappings*

如果您正在处理复杂映射，请小心使用此工具，因为即使匹配字段中的轻微逻辑错误也会产生意外结果。
====
